# ByteBlogger-backend

./: .gitignore  License.md  README.md  example.env  manage.py  pyproject.toml  requirements.txt
ByteBlogger/: asgi.py  settings.py  urls.py  wsgi.py
ByteBlogger/settings/: __init__.py  base.py  dev.py  development.py  jazzmin.py  jwt_config.py  prod.py  production.py
blog/: admin.py  models.py  serializers.py  signals.py  tests.py  urls.py  views.py
fastapi/: main.py
users/: admin.py  models.py  otp.py  serializers.py  urls.py  views.py
users/services/: auth_service.py  auth_services.py  otp_service.py  profile_service.py  token_service.py
users/utils/: otp.py  otp_utils.py
users/views/: __init__.py  auth_views.py  otp_views.py  profile_views.py  token_views.py
