[project]
name = "byteblogger-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asgiref==3.8.1",
    "django==5.1.4",
    "django-cors-headers==4.7.0",
    "django-jazzmin==3.0.1",
    "djangorestframework==3.15.2",
    "djangorestframework-simplejwt==5.4.0",
    "faker==33.3.1",
    "pillow==11.1.0",
    "pyjwt==2.10.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "six==1.17.0",
    "sqlparse==0.5.3",
    "typing-extensions==4.12.2",
    "tzdata==2024.2",
]
