[project]
name = "byteblogger-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asgiref==3.11.1",
    "django==6.0.2",
    "django-cors-headers==4.9.0",
    "django-jazzmin==3.0.2",
    "djangorestframework==3.16.1",
    "djangorestframework-simplejwt==5.5.1",
    "faker==40.4.0",
    "pillow==12.1.1",
    "pyjwt==2.11.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.1",
    "six==1.17.0",
    "sqlparse==0.5.5",
    "typing-extensions==4.15.0",
    "tzdata==2025.3",
]
